Fix layout issues

--- a/css/kata.css
+++ b/css/kata.css
@@ -31,7 +31,7 @@ body {
 	display: block;
 	font-weight: 900;
 	font-family: 'Titillium Web', sans-serif;
-	font-size: 3.2em;
+	font-size: 2.5em;
 	line-height: 75px;
 }
 
@@ -45,6 +45,11 @@ body {
 	font-size: 2.4em;
 	margin: 0;
 	font-weight: 100;
+}
+
+#myKata h3 {
+		font-size: 2.2em;
+		margin-bottom: 15px;
 }
 
 #myKata p {
@@ -258,7 +263,7 @@ body {
 /* Results */
 #myKata .results {
 	position: absolute;
-	top: 200px;
+	top: 180px;
 	left: 660px;
 	width: 550px;
 }
@@ -320,7 +325,7 @@ body {
 	
 	#myKata h1 span {
 		line-height: 43px;
-		font-size: 3em;
+		font-size: 2.5em;
 	}
 	
 	#myKata h2 {
@@ -366,6 +371,7 @@ body {
 		font-size: 1.4em;
 		margin-bottom: 15px;
 		width: 290px;
+		margin-top: 15px
 	}
 	
 	#myKata .question .ans {
@@ -385,7 +391,7 @@ body {
 	
 	#myKata .results {
 		width: 260px;
-		top: 150px;
+		top: 120px;
 		left: 330px;
 	}
 	
